Cleaned up the directory structure a lot, fixed a bit with the installation script and a bug that caused all child elements to be collapsed when a grandparent was collapsed.

--- a/css/markdown.style.css
+++ b/css/markdown.style.css
@@ -17,8 +17,15 @@ h2 {
 	background-color: #7A8AFF;
 }
 
+code {
+	white-space: pre;
+}
+
 em {
 	font-weight: bold;
 	font-style: normal;
 }
 
+div {
+	display: none;
+}
